fix(components): improve layer contrast color

--- a/packages/components/src/card/element.css
+++ b/packages/components/src/card/element.css
@@ -2,6 +2,7 @@
   --background: var(--bp-layer-container-background);
   --color: var(--bp-text-color-500);
   --border-radius: var(--bp-object-border-radius-100);
+  --border: 0;
   --padding: var(--bp-size-6);
   --height: 100%;
   --width: 100%;
@@ -12,6 +13,7 @@
 
 [part='internal'] {
   background: var(--background);
+  border: var(--border);
   color: var(--color);
   border-radius: var(--border-radius);
   height: var(--height);
